--- a/master.css
+++ b/master.css
@@ -1,100 +1,1 @@
-
-/*#carousel{
-    width: 100%;
-    height: 90%;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: inline-block;
-    align-items: center;
-}*/
-
-.carousel-inner img {
-    width: 100%;
-    height: 300px;
-}
-
-
-
-.sobre{
-    text-align: center;
-    color: grey;
-}
-
-.destitulo{
-   text-align: center;
-}
-
-#destaque{
-    padding:3%;
-
-}
-
-#centralizar{
-    margin:10%;
-    padding-left: 23%;
-}
-
-
-.textaligne{
-    text-align: center;
-}
-
-/* cadastrar */
-
-#textaligne1{
-    text-align: center;
-}
-
-#textaligne2{
-    text-align: center;
-}
-
-#textaligne3{
-    text-align: center;
-}
-
-/*  */
-.ha{
-    display: block;
-    text-align: center;
-
-}
-
-#ha{
-    display: block;
-    text-align: center;
-
-}
-
-.hidden {
-    display: none;
-    visibility: hidden;
-  }
-
-.hr{
-    color: #f00;
-    background-color: black;
-
-}
-
-#conta{
-    text-align: center;
-}
-
- .container{
-    display: block;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 550px;
- }
-
- .card{
-     display: inline-block;
- }
-
- .display{
-     display: inline-block;
-     margin:2%;
- }
+#conta,#ha,#textaligne1,#textaligne2,#textaligne3,.destitulo,.ha,.sobre,.textaligne{text-align:center}.carousel-inner img{width:100%;height:300px}.sobre{color:grey}#destaque{padding:3%}#centralizar{margin:10%;padding-left:23%}#ha,.ha{display:block}.hidden{display:none;visibility:hidden}.hr{color:red;background-color:#000}.container{display:block;position:relative;margin-left:auto;margin-right:auto;max-width:550px}.card,.display{display:inline-block}.display{margin:2%}
